Fixed GenerateAWSsignature.